--- a/src/NeuronalNetworks/NeuronalNetworks.Gui/MainWindow.xaml
+++ b/src/NeuronalNetworks/NeuronalNetworks.Gui/MainWindow.xaml
@@ -1,8 +1,41 @@
 ﻿<Window x:Class="NeuronalNetworks.Gui.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Title="Neuronal Networks" 
+        Height="350" 
+        Width="725">
+    <Window.Resources>
         
+
+        
+
+       
+    </Window.Resources>
+    <Grid>
+        <DockPanel  HorizontalAlignment="Stretch" Margin="0" Name="MainPanel" VerticalAlignment="Stretch" LastChildFill="True">
+            <Menu Height="23" Name="mainMenu"  DockPanel.Dock="Top">
+                <MenuItem Header="_File" Click="FileMenuOnClick">
+                    <MenuItem Header="_New network" Name="NewNetwork"/>
+                    <MenuItem Header="_Open network" Name="OpenNetwork"/>
+                    <MenuItem Header="_Save network" Name="SaveNetwork"/>
+                    <Separator />
+                    <MenuItem Header="_Exit" />
+                </MenuItem>
+                <MenuItem Header="_Data">
+                    <MenuItem Header="_Open from file" Name="OpenFromFile"/>
+                </MenuItem>
+                <MenuItem Header="_Learning">
+                    <MenuItem Header="_Start Learning" Name="Learning"/>
+                </MenuItem>
+            </Menu>
+            <StatusBar Height="23" Name="statusBar1" DockPanel.Dock="Bottom" />
+            <DockPanel  HorizontalAlignment="Stretch" Margin="0" Name="childPanel" VerticalAlignment="Stretch" LastChildFill="False">
+                <Button Content="Dock=Right" DockPanel.Dock="Right"/>
+                <ListBox HorizontalAlignment="Stretch" Name="LayersBox" Width="120" />
+                <ListBox HorizontalAlignment="Stretch" Name="NeuronsBox" Width="120" />
+                <DataGrid ItemsSource ="{Binding Weights, Mode=TwoWay}" Name="WeightsBox" Width="120" AutoGenerateColumns="True">
+
+                </DataGrid>
+            </DockPanel>
+        </DockPanel>
     </Grid>
 </Window>
