Update (code quality low :( )

--- a/src/NeuronalNetworks/NeuronalNetworks.Gui/MainWindow.xaml
+++ b/src/NeuronalNetworks/NeuronalNetworks.Gui/MainWindow.xaml
@@ -23,7 +23,7 @@
                 <MenuItem Header="_Data" Click="DataMenuOnClick">
                     <MenuItem Header="_Open from file" Name="OpenFromFile"/>
                 </MenuItem>
-                <MenuItem Header="_Learning">
+                <MenuItem Header="_Learning" Click="LearnMenuOnClick">
                     <MenuItem Header="_Start Learning" Name="Learning"/>
                 </MenuItem>
             </Menu>
