--- a/src/NeuronalNetworks/NeuronalNetworks.Gui/MainWindow.xaml
+++ b/src/NeuronalNetworks/NeuronalNetworks.Gui/MainWindow.xaml
@@ -26,6 +26,7 @@
                 <MenuItem Header="_Learning" Click="LearnMenuOnClick">
                     <MenuItem Header="_Start SOM Learning" Name="Learning"/>
                     <MenuItem Header="_Start CP Learning" Name="CPLearning"/>
+                    <MenuItem Header="_Start BP Learning" Name="BPLearning"/>
                 </MenuItem>
             </Menu>
             <StatusBar Height="23" Name="statusBar1" DockPanel.Dock="Bottom" />
